--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "three": "^0.174.0"
   },
   "devDependencies": {
     "vite": "^6.2.2"
+  },
+  "scripts": {
+    "build": "vite build",
+    "deploy": "vite build && gh-pages -d dist"
   }
 }
